admin panel og form validation

--- a/client/home/home.html
+++ b/client/home/home.html
@@ -2,7 +2,8 @@
     <h2>Welcome {{currentUser.profile.name}}</h2>
     <h3>Find your courses here and master them in no-time!</h3>
 
-    <input type="text" class="homesearch" placeholder="Search for school, course or courseid" />
+    <input type="text" class="homesearch" placeholder="Search for school, course or courseid. example: 'Reykjavík University' or 'Linear Algebra" />
 
     <h3> Or browse them below </h3>
+    {{> loginButtons}}
 </template>
