--- a/client/home/home.html
+++ b/client/home/home.html
@@ -4,6 +4,19 @@
 
     <input type="text" class="homesearch" placeholder="Search for school, course or courseid. example: 'Reykjavík University' or 'Linear Algebra" />
 
-    <h3> Or browse them below </h3>
-    {{> loginButtons}}
+    {{> schools}}
+</template>
+
+<template name="schools">
+	<h4>Schools</h4>
+	<div class="schoolview">
+		{{#each schools}}
+		<a href="/school/{{_id}}">
+			<div class="school">
+				<img src="{{img}}"/>
+				<p>{{name}}</p>
+			</div>
+		</a>
+		{{/each}}
+	</div>
 </template>
