--- a/client/admin/admin.html
+++ b/client/admin/admin.html
@@ -37,13 +37,13 @@
 	<ul class="adminlist schoollist">
 	<h3>Schools</h3>
 	{{#each schools}}
-		<li id="{{_id}}">SMEGMA</li>
+		<li id="{{_id}}">{{name}} <i class="fa fa-remove"></i></li>
 	{{/each}}
 	</ul>
 	<ul class="adminlist courselist">
 	<h3>Courses</h3>
 	{{#each courses}}
-		<li>SMEGMA</li>
+		<li id="{{_id}}">{{name}} <i class="fa fa-remove"></i></li>
 	{{/each}}
 	</ul>
 	<ul class="adminlist catlist">
